Added new content -  Intercept

--- a/landscape.html
+++ b/landscape.html
@@ -58,29 +58,35 @@
                     <td>Fibrosis</td>
                     <td>Cyclophilin</td>
                 </tr>
-                <tr class="table-warning">
+                <tr class="table-info">
                     <td>Efruxiferimin</td>
                     <td>Akero </td>
                     <td>Metabolic</td>
                     <td>FGF21</td>
                 </tr>
-                <tr class="table-danger">
+                <tr class="table-success">
                     <td>Resmetirom</td>
                     <td>Madrigal</td>
                     <td>Metabolic</td>
                     <td>THR-β</td>
                 </tr>
-                <tr class="table-primary">
+                <tr class="table-info">
                     <td>VK2809</td>
                     <td>Viking </td>
                     <td>Metabolic</td>
                     <td>FGF21</td>
                 </tr>
-                <tr class="table-info">
+                <tr class="table-success">
                     <td>Pegozafermin</td>
                     <td>89bio</td>
                     <td>Metabolic</td>
                     <td>THR-β</td>
+                </tr>
+                <tr class="table-danger">
+                    <td class="cancel">Obeticholic</td>
+                    <td>Intercept</td>
+                    <td>Metabolic</td>
+                    <td>FXR</td>
                 </tr>
             </tbody>
         </table>
@@ -201,7 +207,7 @@
     <div class="divider"></div>
 
     <div class="container my-4 mx-auto px-0 shadow-lg">
-        <table class="table table-striped table-warning">
+        <table class="table table-striped table-info">
             <thead>
                 <tr class="table-dark">
                     <th scope="col">AKRO-HARMONY</th>
@@ -280,7 +286,7 @@
     <div class="divider"></div>
 
     <div class="container my-4 mx-auto px-0 shadow-lg">
-        <table class="table table-striped table-danger">
+        <table class="table table-striped table-success">
             <thead>
                 <tr class="table-dark">
                     <th scope="col">MDGL-MAESTRO-NASH</th>
@@ -317,7 +323,7 @@
     <div class="divider"></div>
 
     <div class="container my-4 mx-auto px-0 shadow-lg">
-        <table class="table table-striped table-primary">
+        <table class="table table-striped table-info">
             <thead>
                 <tr class="table-dark">
                     <th scope="col">VKTX-VOYAGE</th>
@@ -354,7 +360,7 @@
     </div>
     <div class="divider"></div>
     <div class="container my-4 mx-auto px-0 shadow-lg">
-        <table class="table table-striped table-info">
+        <table class="table table-striped table-success">
             <thead>
                 <tr class="table-dark">
                     <th scope="col">ETNB-ENLIVEN</th>
@@ -416,6 +422,32 @@
         </table>
     </div>
     <div class="divider"></div>
+    <div class="container my-4 mx-auto px-0 shadow-lg">
+        <table class="table table-striped table-danger">
+            <thead>
+                <tr class="table-dark">
+                    <th scope="col">ICPT-REGENERATE</th>
+                    <th scope="col">Placebo (n=311)</th>
+                    <th scope="col">10mg (n=312)</th>
+                    <th scope="col">25mg (n=308)</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Improvement > 1 Stage Of Fibrosis</td>
+                    <td>9.6%</td>
+                    <td>14.1%</td>
+                    <td>22.4%</td>
+                </tr>
+                <tr>
+                    <td>NASH Resolution</td>
+                    <td>3.5%</td>
+                    <td>6.1%</td>
+                    <td>6.5%</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 
 </body>
 
