--- a/landscape.html
+++ b/landscape.html
@@ -82,6 +82,30 @@
                     <td>Metabolic</td>
                     <td>THR-β</td>
                 </tr>
+                <tr class="table-info">
+                    <td>Semaglutide</td>
+                    <td>Novo Nordisk</td>
+                    <td>Metabolic</td>
+                    <td>GLP-1R</td>
+                </tr>
+                <tr class="table-success">
+                    <td>Aldafermin</td>
+                    <td>NGM Bio</td>
+                    <td>Metabolic</td>
+                    <td>FGF19</td>
+                </tr>
+                <tr class="table-info">
+                    <td>Lanifibranor</td>
+                    <td>Inventiva</td>
+                    <td>Metabolic</td>
+                    <td>PPAR</td>
+                </tr>
+                <tr class="table-success">
+                    <td>Pemvidutide</td>
+                    <td>Altimmune</td>
+                    <td>Metabolic</td>
+                    <td>GLP-1</td>
+                </tr>
                 <tr class="table-danger">
                     <td class="cancel">Obeticholic</td>
                     <td>Intercept</td>
@@ -224,7 +248,7 @@
                     <td>41%</td>
                 </tr>
                 <tr>
-                    <td>NASH Resolution</td>
+                    <td>NASH Resolution</td>v
                     <td>15%</td>
                     <td>47%</td>
                     <td>76%</td>
@@ -422,6 +446,307 @@
         </table>
     </div>
     <div class="divider"></div>
+
+    <div class="container my-4 mx-auto px-0 shadow-lg">
+        <table class="table table-striped table-info">
+            <thead>
+                <tr class="table-dark">
+                    <th scope="col">NVO-PHASE 2</th>
+                    <th scope="col">Placebo (n=24)</th>
+                    <th scope="col">2.4mg (n=47)</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Improvement > 1 Stage Of Fibrosis</td>
+                    <td>29.2%</td>
+                    <td>10.6%</td>
+                </tr>
+                <tr>
+                    <td>NASH Resolution</td>
+                    <td>20.8%</td>
+                    <td>34%</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="divider"></div>
+
+    <div class="container my-4 mx-auto px-0 shadow-lg">
+        <table class="table table-striped table-success">
+            <thead>
+                <tr class="table-dark">
+                    <th scope="col">NGM-ALPINE 4</th>
+                    <th scope="col" colspan="2">Placebo (n=)</th>
+                    <th scope="col">1mg (n=)</th>
+                    <th scope="col">3mg (n=)</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Improvement > 1 Stage Of Fibrosis</td>
+                    <td colspan="2">15%</td>
+                    <td>21%</td>
+                    <td>23%</td>
+
+                </tr>
+                <tr>
+                    <td>ELF Score</td>
+                    <td colspan="2"></td>
+                    <td>-0.1</td>
+                    <td>-0.5</td>
+                </tr>
+                <tr class="table-dark">
+                    <th scope="col">NGM-ALPINE 2/3</th>
+                    <th scope="col">Placebo (n=36)</th>
+                    <th scope="col">0.3mg (n=36)</th>
+                    <th scope="col">1mg (n=34)</th>
+                    <th scope="col">3mg (n=37)</th>
+                </tr>
+                <tr>
+                    <td>Improvement > 1 Stage Of Fibrosis</td>
+                    <td>19%</td>
+                    <td>31%</td>
+                    <td>15%</td>
+                    <td>30%</td>
+                </tr>
+                <tr>
+                    <td>NASH Resolution</td>
+                    <td>6%</td>
+                    <td>11%</td>
+                    <td>18%</td>
+                    <td>22%</td>
+                </tr>
+                <tr>
+                    <td>Improvement > 1 Stage Of Fibrosis & NASH Resolution</td>
+                    <td>3%</td>
+                    <td>11%</td>
+                    <td>9%</td>
+                    <td>14%</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="divider"></div>
+
+    <div class="container my-4 mx-auto px-0 shadow-lg">
+        <table class="table table-striped table-info">
+            <thead>
+                <tr class="table-dark">
+                    <th scope="col">IVA-NATIVE</th>
+                    <th scope="col">Placebo (n=81)</th>
+                    <th scope="col">800mg (n=83)</th>
+                    <th scope="col">1200mg (n=83)</th>
+                </tr>
+            </thead>
+            <tr class="table-dark">
+                <th class="text-center" scope="col" colspan=5>Intention to Treat Population (ITT)</th>
+            </tr>
+            <tbody>
+                <tr>
+                    <td>Decrease of >= 2 Points of SAF Score</td>
+                    <td>27%</td>
+                    <td>41%</td>
+                    <td>49%</td>
+                </tr>
+                <tr>
+                    <td>NASH Resolution</td>
+                    <td>19%</td>
+                    <td>33%</td>
+                    <td>45%</td>
+                </tr>
+                <tr>
+                    <td>NASH Resolution in F2/F3</td>
+                    <td>9%</td>
+                    <td>34%</td>
+                    <td>44%</td>
+                </tr>
+                <tr>
+                    <td>Improvement > 1 Stage Of Fibrosis</td>
+                    <td>24%</td>
+                    <td>28%</td>
+                    <td>42%</td>
+                </tr>
+                <tr>
+                    <td>Improvement > 1 Stage Of Fibrosis & NASH Resolution</td>
+                    <td>7%</td>
+                    <td>21%</td>
+                    <td>31%</td>
+                </tr>
+                <tr>
+                    <td>Decrease of >= 2 Points of NAS Score</td>
+                    <td>32%</td>
+                    <td>52%</td>
+                    <td>64%</td>
+                </tr>
+                <tr class="table-dark">
+                    <th class="text-center" scope="col" colspan=5>Per Protocol Population (PP)</th>
+                </tr>
+                <thead>
+                    <tr class="table-dark">
+                        <th scope="col"></th>
+                        <th scope="col">Placebo (n=62)</th>
+                        <th scope="col">800mg (n=63)</th>
+                        <th scope="col">1200mg (n=69)</th>
+                    </tr>
+                </thead>
+                <tr>
+                    <td>Decrease of >= 2 Points of SAF Score</td>
+                    <td>34%</td>
+                    <td>51%</td>
+                    <td>55%</td>
+                </tr>
+                <tr>
+                    <td>NASH Resolution</td>
+                    <td>23%</td>
+                    <td>40%</td>
+                    <td>49%</td>
+                </tr>
+                <tr>
+                    <td>NASH Resolution in F2/F3</td>
+                    <td>11%</td>
+                    <td>40%</td>
+                    <td>51%</td>
+                </tr>
+                <tr>
+                    <td>Improvement > 1 Stage Of Fibrosis</td>
+                    <td>29%</td>
+                    <td>32%</td>
+                    <td>46%</td>
+                </tr>
+                <tr>
+                    <td>Improvement > 1 Stage Of Fibrosis & NASH Resolution</td>
+                    <td>10%</td>
+                    <td>24%</td>
+                    <td>33%</td>
+                </tr>
+                <tr>
+                    <td>Decrease of >= 2 Points of NAS Score</td>
+                    <td>40%</td>
+                    <td>62%</td>
+                    <td>71%</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <div class="divider"></div>
+
+    <div class="container my-4 mx-auto px-0 shadow-lg">
+        <table class="table table-striped table-info">
+            <thead>
+                <tr class="table-dark">
+                    <th scope="col">ALT-PHASE 1B</th>
+                    <th scope="col">Placebo (n=18)</th>
+                    <th scope="col">1.2mg (n=14)</th>
+                    <th scope="col">1.8mg (n=13)</th>
+                    <th scope="col">2.4mg (n=11)</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Absolute - Liver Fat Reduction</td>
+                    <td>1.6%</td>
+                    <td>11.2%</td>
+                    <td>17%</td>
+                    <td>15.6%</td>
+                </tr>
+                <tr>
+                    <td>Relative - Liver Fat Reduction</td>
+                    <td>14%</td>
+                    <td>56.3%</td>
+                    <td>75.2%</td>
+                    <td>76.4%</td>
+                </tr>
+                <tr>
+                    <td>Proportion of Subjects with 30% Reduction</td>
+                    <td>5.6%</td>
+                    <td>76.9%</td>
+                    <td>92.3%</td>
+                    <td>100%</td>
+                </tr>
+                <tr>
+                    <td>Proportion of Subjects with 50% Reduction</td>
+                    <td>0%</td>
+                    <td>61.5%</td>
+                    <td>84.6%</td>
+                    <td>72.7%</td>
+                </tr>
+                <tr class="table-dark">
+                    <th scope="col" class="table-info"></th>
+                    <th scope="col">(n=19)</th>
+                    <th scope="col">(n=16)</th>
+                    <th scope="col">(n=15)</th>
+                    <th scope="col">(n=14)</th>
+                </tr>
+                <tr>
+                    <td>ALT (IU/L)</td>
+                    <td>-2.2</td>
+                    <td>-13.3</td>
+                    <td>-13.7</td>
+                    <td>-15.2</td>
+                </tr>
+                <tr class="table-dark">
+                    <th scope="col" class="table-info"></th>
+                    <th scope="col">(n=13)</th>
+                    <th scope="col">(n=7)</th>
+                    <th scope="col">(n=10)</th>
+                    <th scope="col">(n=9)</th>
+                </tr>
+                <tr>
+                    <td>ALT (IU/L) - Baseline >= 30 IU/L</td>
+                    <td>-3.1</td>
+                    <td>-17</td>
+                    <td>-17.7</td>
+                    <td>-20.6</td>
+                </tr>
+                <tr class="table-dark">
+                    <th scope="col" class="table-info"></th>
+                    <th scope="col">(n=14)</th>
+                    <th scope="col">(n=13)</th>
+                    <th scope="col">(n=9)</th>
+                    <th scope="col">(n=11)</th>
+                </tr>
+                <tr>
+                    <td>Weight Loss - No Diabetes</td>
+                    <td>1.2%</td>
+                    <td>5.2%</td>
+                    <td>7.2%</td>
+                    <td>5.8%</td>
+                </tr>
+                <tr class="table-dark">
+                    <th scope="col" class="table-info"></th>
+                    <th scope="col">(n=5)</th>
+                    <th scope="col">(n=3)</th>
+                    <th scope="col">(n=6)</th>
+                    <th scope="col">(n=3)</th>
+                </tr>
+                <tr>
+                    <td>Weight Loss - Diabetes</td>
+                    <td>3.4%</td>
+                    <td>4.3%</td>
+                    <td>5.3%</td>
+                    <td>3.5%</td>
+                </tr>
+                <tr class="table-dark">
+                    <th scope="col" class="table-info"></th>
+                    <th scope="col">(n=19)</th>
+                    <th scope="col">(n=16)</th>
+                    <th scope="col">(n=15)</th>
+                    <th scope="col">(n=14)</th>
+                </tr>
+                <tr>
+                    <td>Weight Loss - All Subjects</td>
+                    <td>1.4%</td>
+                    <td>5.1%</td>
+                    <td>6.2%</td>
+                    <td>5.2%</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="divider"></div>
+
     <div class="container my-4 mx-auto px-0 shadow-lg">
         <table class="table table-striped table-danger">
             <thead>
