--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
         </div>
     </nav>
     <!-- Content -->
-    <div class="card w-50 text-center mx-auto my-4 bg-primary-subtle border-0 shadow">
+    <div class="card w-75 text-center mx-auto my-4 bg-primary-subtle border-0 shadow">
         <div class="row ">
             <div class="col-xl-4 col-12 d-flex align-items-center">
                 <img class="img-fluid" src="images/rencofilstat.gif" alt="The small molecule Rencofilstat">
@@ -70,7 +70,7 @@
             </div>
         </div>
     </div>
-    <div class="card text-center border-0 w-50 mx-auto my-4 bg-warning-subtle shadow">
+    <div class="card text-center border-0 w-75 mx-auto my-4 bg-warning-subtle shadow">
         <div class="row">
             <div class="col-lg-3 col-12">
                 <img class="img-fluid" src="images/cycleA.gif" alt="Cyclophilin A">
@@ -81,12 +81,15 @@
                     <p class="card-text">Rencofilstat binds to Cyclophilin A, which blocks the binding of Cyclophilin A
                         to specific receptors on inflammatory cells, decreasing infiltration of the cells into the
                         tissue and production of harmful inflammatory molecules, resulting in reduced inflammatory
-                        damage to the liver.</p>
+                        damage to the liver.<br><br>
+                        Cyclophilin A specifically is found in the cytoplasm of cells and is known to be involved in various biological processes, including protein folding, intracellular trafficking, immune responses, and signal transduction. One of its notable functions is its interaction with the immunosuppressive drug cyclosporine A. This drug binds to cyclophilin A and forms a complex that inhibits the activity of calcineurin, a key enzyme in the immune response. By inhibiting calcineurin, cyclosporine A helps suppress the immune system, making it useful for preventing organ transplant rejection and treating certain autoimmune diseases.
+                        <br><br>
+                        Additionally, cyclophilin A has been implicated in various disease processes. It has been associated with inflammatory and immune responses, and its levels have been found to be elevated in certain diseases, including viral infections, cardiovascular diseases, and neurodegenerative disorders. Research is ongoing to better understand the roles of cyclophilin A in health and disease, and it continues to be a topic of interest in both basic science and clinical research.</p>
                 </div>
             </div>
         </div>
     </div>
-    <div class="card text-center border-0 w-50 mx-auto my-4 bg-info-subtle shadow">
+    <div class="card text-center border-0 w-75 mx-auto my-4 bg-info-subtle shadow">
         <div class="row ">
             <div class="col-lg-3 col-12">
                 <img class="img-fluid" src="images/cycleB.gif" alt="Cyclophilin B">
@@ -96,12 +99,14 @@
                     <h5 class="card-title">Rencofilstat Binds to Cylophilin B</h5>
                     <p class="card-text">Rencofilstat blocks the actions of Cylcophilin B, an important regulator of
                         collagen production in stealate cells. This leads to a reduction in collagen secretions and
-                        fibrotic scarring, a primary goal in the treatment of NASH.</p>
+                        fibrotic scarring, a primary goal in the treatment of NASH.<br><br>
+                        One of the well-known roles of cyclophilin B is its involvement in the folding and maturation of collagen, a major component of the extracellular matrix that provides structural support to various tissues in the body. Cyclophilin B assists in the proper folding of collagen molecules in the ER before they are secreted from the cell.<br><br>
+                        In addition to its role in collagen maturation, cyclophilin B has been linked to various cellular processes, including protein trafficking, calcium homeostasis, and immune responses. It has also been associated with certain disease conditions, such as fibrosis and autoimmune disorders.</p>
                 </div>
             </div>
         </div>
     </div>
-    <div class="card text-center border-0 w-50 mx-auto my-4 bg-danger-subtle shadow">
+    <div class="card text-center border-0 w-75 mx-auto my-4 bg-danger-subtle shadow">
         <div class="row ">
             <div class="col-lg-3 col-12">
                 <img class="img-fluid" src="images/cycleD.gif" alt="Cyclophilin B">
@@ -111,7 +116,9 @@
                     <h5 class="card-title">Rencofilstat Binds to Cylophilin D</h5>
                     <p class="card-text">Rencofilstat binds to Cyclophiln D which prevents or reverses the formation of
                         pores in the mitochondrial membrane that cause mitochondria to rupture, allowing mitochondria to
-                        resume normal energy production, and enabling the survival of liver cells.</p>
+                        resume normal energy production, and enabling the survival of liver cells.<br><br>
+                        One of the most prominent roles of cyclophilin D is its involvement in the regulation of mitochondrial permeability transition pore (mPTP), a complex structure that spans the inner and outer mitochondrial membranes. The mPTP plays a critical role in regulating the permeability of the mitochondrial membranes, particularly during cellular stress and apoptosis (programmed cell death).<br><br>Cyclophilin D interacts with the mPTP and its modulation can influence the opening of the pore. When the mPTP opens, it can lead to the disruption of the mitochondrial membrane potential and the release of molecules that are normally sequestered within the mitochondria, such as cytochrome c. This release can trigger the activation of apoptosis, a controlled process that eliminates damaged or unnecessary cells.<br><br>
+                        The role of cyclophilin D and the mPTP is complex and is associated with various physiological and pathological processes, including cell survival, oxidative stress, neurodegenerative diseases, ischemia-reperfusion injury (such as occurs during heart attacks), and more. Researchers have been investigating the potential of targeting cyclophilin D and the mPTP as a therapeutic strategy for various conditions, particularly those involving mitochondrial dysfunction and cell death.</p>
                 </div>
             </div>
         </div>
