--- a/landscape.html
+++ b/landscape.html
@@ -52,7 +52,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr class="table-success">
+                <tr class="table-warning">
                     <td>Rencofilstat</td>
                     <td>Hepion</td>
                     <td>Fibrosis</td>
@@ -64,7 +64,7 @@
                     <td>Metabolic</td>
                     <td>FGF21</td>
                 </tr>
-                <tr class="table-success">
+                <tr class="table-warning">
                     <td>Resmetirom</td>
                     <td>Madrigal</td>
                     <td>Metabolic</td>
@@ -76,7 +76,7 @@
                     <td>Metabolic</td>
                     <td>FGF21</td>
                 </tr>
-                <tr class="table-success">
+                <tr class="table-warning">
                     <td>Pegozafermin</td>
                     <td>89bio</td>
                     <td>Metabolic</td>
@@ -88,7 +88,7 @@
                     <td>Metabolic</td>
                     <td>GLP-1R</td>
                 </tr>
-                <tr class="table-success">
+                <tr class="table-warning">
                     <td>Aldafermin</td>
                     <td>NGM Bio</td>
                     <td>Metabolic</td>
@@ -100,11 +100,17 @@
                     <td>Metabolic</td>
                     <td>PPAR</td>
                 </tr>
-                <tr class="table-success">
+                <tr class="table-warning">
                     <td>Pemvidutide</td>
                     <td>Altimmune</td>
                     <td>Metabolic</td>
                     <td>GLP-1</td>
+                </tr>
+                <tr class="table-info">
+                    <td>TERN-501</td>
+                    <td>Terns</td>
+                    <td>Metabolic</td>
+                    <td>THR-β</td>
                 </tr>
                 <tr class="table-danger">
                     <td class="cancel">Obeticholic</td>
@@ -118,7 +124,7 @@
     <div class="divider"></div>
 
     <div class="container my-4 mx-auto px-0 shadow-lg">
-        <table class="table table-striped table-success">
+        <table class="table table-striped table-warning">
             <thead>
                 <tr class="table-dark">
                     <th scope="col">HEPA-ALTITUDE</th>
@@ -248,7 +254,7 @@
                     <td>41%</td>
                 </tr>
                 <tr>
-                    <td>NASH Resolution</td>v
+                    <td>NASH Resolution</td>
                     <td>15%</td>
                     <td>47%</td>
                     <td>76%</td>
@@ -310,7 +316,7 @@
     <div class="divider"></div>
 
     <div class="container my-4 mx-auto px-0 shadow-lg">
-        <table class="table table-striped table-success">
+        <table class="table table-striped table-warning">
             <thead>
                 <tr class="table-dark">
                     <th scope="col">MDGL-MAESTRO-NASH</th>
@@ -384,7 +390,7 @@
     </div>
     <div class="divider"></div>
     <div class="container my-4 mx-auto px-0 shadow-lg">
-        <table class="table table-striped table-success">
+        <table class="table table-striped table-warning">
             <thead>
                 <tr class="table-dark">
                     <th scope="col">ETNB-ENLIVEN</th>
@@ -473,7 +479,7 @@
     <div class="divider"></div>
 
     <div class="container my-4 mx-auto px-0 shadow-lg">
-        <table class="table table-striped table-success">
+        <table class="table table-striped table-warning">
             <thead>
                 <tr class="table-dark">
                     <th scope="col">NGM-ALPINE 4</th>
@@ -633,7 +639,7 @@
     <div class="divider"></div>
 
     <div class="container my-4 mx-auto px-0 shadow-lg">
-        <table class="table table-striped table-info">
+        <table class="table table-striped table-warning">
             <thead>
                 <tr class="table-dark">
                     <th scope="col">ALT-PHASE 1B</th>
@@ -673,7 +679,7 @@
                     <td>72.7%</td>
                 </tr>
                 <tr class="table-dark">
-                    <th scope="col" class="table-info"></th>
+                    <th scope="col" class="table-light"></th>
                     <th scope="col">(n=19)</th>
                     <th scope="col">(n=16)</th>
                     <th scope="col">(n=15)</th>
@@ -687,7 +693,7 @@
                     <td>-15.2</td>
                 </tr>
                 <tr class="table-dark">
-                    <th scope="col" class="table-info"></th>
+                    <th scope="col" class="table-light"></th>
                     <th scope="col">(n=13)</th>
                     <th scope="col">(n=7)</th>
                     <th scope="col">(n=10)</th>
@@ -701,7 +707,7 @@
                     <td>-20.6</td>
                 </tr>
                 <tr class="table-dark">
-                    <th scope="col" class="table-info"></th>
+                    <th scope="col" class="table-light"></th>
                     <th scope="col">(n=14)</th>
                     <th scope="col">(n=13)</th>
                     <th scope="col">(n=9)</th>
@@ -715,7 +721,7 @@
                     <td>5.8%</td>
                 </tr>
                 <tr class="table-dark">
-                    <th scope="col" class="table-info"></th>
+                    <th scope="col" class="table-light"></th>
                     <th scope="col">(n=5)</th>
                     <th scope="col">(n=3)</th>
                     <th scope="col">(n=6)</th>
@@ -729,7 +735,7 @@
                     <td>3.5%</td>
                 </tr>
                 <tr class="table-dark">
-                    <th scope="col" class="table-info"></th>
+                    <th scope="col" class="table-light"></th>
                     <th scope="col">(n=19)</th>
                     <th scope="col">(n=16)</th>
                     <th scope="col">(n=15)</th>
@@ -747,6 +753,49 @@
     </div>
     <div class="divider"></div>
 
+    <div class="container my-4 mx-auto px-0 shadow-lg">
+        <table class="table table-striped table-info">
+            <thead>
+                <tr class="table-dark">
+                    <th scope="col">TERN-DUET</th>
+                    <th scope="col">Placebo (n=21)</th>
+                    <th scope="col">1mg (n=23)</th>
+                    <th scope="col">3mg (n=19)</th>
+                    <th scope="col">6mg (n=22)</th>
+                </tr>
+                <tr>
+                    <td>Mean Baseline - Liver Fat</td>
+                    <td>17%</td>
+                    <td>16.6%</td>
+                    <td>19.5%</td>
+                    <td>17.3%</td>
+                </tr>
+                <tr>
+                    <td>Relative Change from BL</td>
+                    <td>-4%</td>
+                    <td>-15%</td>
+                    <td>-27%</td>
+                    <td>-45%</td>
+                </tr>
+                <tr>
+                    <td>Absolute Change from BL</td>
+                    <td>-1%</td>
+                    <td>-3%</td>
+                    <td>-5%</td>
+                    <td>-8%</td>
+                </tr>
+                <tr>
+                    <td>% Patients achieving >= 30% Relative Reduction.</td>
+                    <td>4%</td>
+                    <td>26%</td>
+                    <td>39%</td>
+                    <td>64%</td>
+                </tr>
+            </thead>
+        </table>
+    </div>
+
+    <div class="divider"></div>
     <div class="container my-4 mx-auto px-0 shadow-lg">
         <table class="table table-striped table-danger">
             <thead>
