--- a/landscape.html
+++ b/landscape.html
@@ -118,6 +118,46 @@
                     <td>Metabolic</td>
                     <td>FXR</td>
                 </tr>
+                <tr class="table-dark text-center">
+                    <td colspan="4" class="fw-bold">Potential NAFLD/NASH, Under/Ceased Studies</td>
+                </tr>
+                <tr class="table-warning">
+                    <td>BMS-986263</td>
+                    <td>Bristol-Myers Squibb</td>
+                    <td>Fibrosis</td>
+                    <td>HSP47</td>
+                </tr>
+                <tr class="table-info">
+                    <td>MN-001</td>
+                    <td>Medicinova</td>
+                    <td>Fibrosis</td>
+                    <td>Multi-Target</td>
+                </tr>
+                <tr class="table-warning">
+                    <td>Belapectin</td>
+                    <td>Galectin</td>
+                    <td>Fibrosis</td>
+                    <td>Gal-3</td>
+                </tr>
+                <tr class="table-info">
+                    <td>Secukinumab</td>
+                    <td>Novartis</td>
+                    <td>Fibrosis</td>
+                    <td>Antibody</td>
+                </tr>
+                <tr class="table-warning">
+                    <td colspan="2" class="text-center">NN9499 + Semaglutide</td>
+                    <td colspan="2">Novo Nordisk</td>
+
+                </tr>
+                <tr class="table-info">
+                    <td colspan="2" class="text-center">Semaglutide + Firsocostat</td>
+                    <td colspan="2">Novo Nordisk & Gilead</td>
+                </tr>
+                <tr class="table-warning">
+                    <td colspan="2" class="text-center">Semaglutide + Cilofexor + Firsocostat</td>
+                    <td colspan="2">Novo Nordisk & Gilead</td>
+                </tr>
             </tbody>
         </table>
     </div>
