--- a/landscape.html
+++ b/landscape.html
@@ -146,16 +146,16 @@
                     <td>Antibody</td>
                 </tr>
                 <tr class="table-warning">
-                    <td colspan="2" class="text-center">NN9499 + Semaglutide</td>
+                    <td colspan="2">NN9499 + Semaglutide</td>
                     <td colspan="2">Novo Nordisk</td>
 
                 </tr>
                 <tr class="table-info">
-                    <td colspan="2" class="text-center">Semaglutide + Firsocostat</td>
+                    <td colspan="2">Semaglutide + Firsocostat</td>
                     <td colspan="2">Novo Nordisk & Gilead</td>
                 </tr>
                 <tr class="table-warning">
-                    <td colspan="2" class="text-center">Semaglutide + Cilofexor + Firsocostat</td>
+                    <td colspan="2">Semaglutide + Cilofexor + Firsocostat</td>
                     <td colspan="2">Novo Nordisk & Gilead</td>
                 </tr>
             </tbody>
