--- a/landscape.html
+++ b/landscape.html
@@ -259,7 +259,7 @@
                     <td>-4.77%</td>
                 </tr>
                 <tr>
-                    <td>Hyaluronic Acid </td>
+                    <td>Hyaluronic Acid</td>
                     <td>-4.56%</td>
                     <td>6.99%</td>
                     <td>-19.66%</td>
@@ -269,6 +269,9 @@
                     <td>-0.95%</td>
                     <td>-1.64%</td>
                     <td>-5.31%</td>
+                </tr>
+                <tr class="text-center">
+                    <td class="fw-bold h4">PR May 22, 2023</td>
                 </tr>
             </tbody>
         </table>
@@ -350,9 +353,13 @@
                     <td>-39%</td>
                     <td>-49%</td>
                 </tr>
+                <tr class="text-center">
+                    <td class="fw-bold h4">PR Sep 13, 2022</td>
+                </tr>
             </tbody>
         </table>
     </div>
+
     <div class="divider"></div>
 
     <div class="container my-4 mx-auto px-0 shadow-lg">
@@ -387,9 +394,13 @@
                     <td>-12%</td>
                     <td>-16%</td>
                 </tr>
+                <tr class="text-center">
+                    <td class="fw-bold h4">PR Dec 19, 2022</td>
+                </tr>
             </tbody>
         </table>
     </div>
+
     <div class="divider"></div>
 
     <div class="container my-4 mx-auto px-0 shadow-lg">
@@ -425,10 +436,15 @@
                     <td>66.7%</td>
                     <td>84.9%</td>
                 </tr>
+                <tr class="text-center">
+                    <td class="fw-bold h4">PR May 16, 2023</td>
+                </tr>
             </tbody>
         </table>
     </div>
+
     <div class="divider"></div>
+
     <div class="container my-4 mx-auto px-0 shadow-lg">
         <table class="table table-striped table-warning">
             <thead>
@@ -488,6 +504,9 @@
                     <td>-18%</td>
                     <td>-17%</td>
                 </tr>
+                <tr class="text-center">
+                    <td class="fw-bold h4">PR Mar 22, 2023</td>
+                </tr>
             </tbody>
         </table>
     </div>
@@ -512,6 +531,9 @@
                     <td>NASH Resolution</td>
                     <td>20.8%</td>
                     <td>34%</td>
+                </tr>
+                <tr class="text-center">
+                    <td class="fw-bold h4">PR Jun 29, 2022</td>
                 </tr>
             </tbody>
         </table>
@@ -569,6 +591,9 @@
                     <td>11%</td>
                     <td>9%</td>
                     <td>14%</td>
+                </tr>
+                <tr class="text-center">
+                    <td class="fw-bold h4">PR May 24, 2021</td>
                 </tr>
             </tbody>
         </table>
@@ -671,6 +696,9 @@
                     <td>40%</td>
                     <td>62%</td>
                     <td>71%</td>
+                </tr>
+                <tr class="text-center">
+                    <td class="fw-bold h4">PR Oct 20, 2021</td>
                 </tr>
             </tbody>
         </table>
@@ -788,6 +816,9 @@
                     <td>6.2%</td>
                     <td>5.2%</td>
                 </tr>
+                <tr class="text-center">
+                    <td class="bg-warning fw-bold h4">PR Dec 20, 2022</td>
+                </tr>
             </tbody>
         </table>
     </div>
@@ -830,6 +861,9 @@
                     <td>26%</td>
                     <td>39%</td>
                     <td>64%</td>
+                </tr>
+                <tr class="text-center">
+                    <td class=" fw-bold h4">PR Aug 8, 2023</td>
                 </tr>
             </thead>
         </table>
