--- a/landscape.html
+++ b/landscape.html
@@ -40,7 +40,6 @@
             </div>
         </div>
     </nav>
-
     <div class="container my-4 mx-auto px-0 shadow-lg">
         <table class="table table-striped">
             <thead>
@@ -119,7 +118,7 @@
                     <td>FXR</td>
                 </tr>
                 <tr class="table-dark text-center">
-                    <td colspan="4" class="fw-bold">Potential NAFLD/NASH, Under/Ceased Studies</td>
+                    <td colspan="4" class="">Potential NAFLD/NASH, Under/Ceased Studies</td>
                 </tr>
                 <tr class="table-warning">
                     <td>BMS-986263</td>
@@ -144,19 +143,6 @@
                     <td>Novartis</td>
                     <td>Fibrosis</td>
                     <td>Antibody</td>
-                </tr>
-                <tr class="table-warning">
-                    <td colspan="2">NN9499 + Semaglutide</td>
-                    <td colspan="2">Novo Nordisk</td>
-
-                </tr>
-                <tr class="table-info">
-                    <td colspan="2">Semaglutide + Firsocostat</td>
-                    <td colspan="2">Novo Nordisk & Gilead</td>
-                </tr>
-                <tr class="table-warning">
-                    <td colspan="2">Semaglutide + Cilofexor + Firsocostat</td>
-                    <td colspan="2">Novo Nordisk & Gilead</td>
                 </tr>
             </tbody>
         </table>
@@ -271,14 +257,13 @@
                     <td>-5.31%</td>
                 </tr>
                 <tr class="text-center">
-                    <td class="fw-bold h4">PR May 22, 2023</td>
+                    <td class="h4">PR May 22, 2023</td>
                 </tr>
             </tbody>
         </table>
     </div>
-
     <div class="divider"></div>
-
+    
     <div class="container my-4 mx-auto px-0 shadow-lg">
         <table class="table table-striped table-info">
             <thead>
@@ -354,12 +339,11 @@
                     <td>-49%</td>
                 </tr>
                 <tr class="text-center">
-                    <td class="fw-bold h4">PR Sep 13, 2022</td>
+                    <td class=" h4">PR Sep 13, 2022</td>
                 </tr>
             </tbody>
         </table>
     </div>
-
     <div class="divider"></div>
 
     <div class="container my-4 mx-auto px-0 shadow-lg">
@@ -395,12 +379,11 @@
                     <td>-16%</td>
                 </tr>
                 <tr class="text-center">
-                    <td class="fw-bold h4">PR Dec 19, 2022</td>
+                    <td class=" h4">PR Dec 19, 2022</td>
                 </tr>
             </tbody>
         </table>
     </div>
-
     <div class="divider"></div>
 
     <div class="container my-4 mx-auto px-0 shadow-lg">
@@ -437,12 +420,11 @@
                     <td>84.9%</td>
                 </tr>
                 <tr class="text-center">
-                    <td class="fw-bold h4">PR May 16, 2023</td>
+                    <td class=" h4">PR May 16, 2023</td>
                 </tr>
             </tbody>
         </table>
     </div>
-
     <div class="divider"></div>
 
     <div class="container my-4 mx-auto px-0 shadow-lg">
@@ -505,7 +487,7 @@
                     <td>-17%</td>
                 </tr>
                 <tr class="text-center">
-                    <td class="fw-bold h4">PR Mar 22, 2023</td>
+                    <td class=" h4">PR Mar 22, 2023</td>
                 </tr>
             </tbody>
         </table>
@@ -533,7 +515,7 @@
                     <td>34%</td>
                 </tr>
                 <tr class="text-center">
-                    <td class="fw-bold h4">PR Jun 29, 2022</td>
+                    <td class=" h4">PR Jun 29, 2022</td>
                 </tr>
             </tbody>
         </table>
@@ -593,7 +575,7 @@
                     <td>14%</td>
                 </tr>
                 <tr class="text-center">
-                    <td class="fw-bold h4">PR May 24, 2021</td>
+                    <td class=" h4">PR May 24, 2021</td>
                 </tr>
             </tbody>
         </table>
@@ -698,12 +680,11 @@
                     <td>71%</td>
                 </tr>
                 <tr class="text-center">
-                    <td class="fw-bold h4">PR Oct 20, 2021</td>
+                    <td class=" h4">PR Oct 20, 2021</td>
                 </tr>
             </tbody>
         </table>
     </div>
-
     <div class="divider"></div>
 
     <div class="container my-4 mx-auto px-0 shadow-lg">
@@ -817,7 +798,7 @@
                     <td>5.2%</td>
                 </tr>
                 <tr class="text-center">
-                    <td class="bg-warning fw-bold h4">PR Dec 20, 2022</td>
+                    <td class="bg-warning  h4">PR Dec 20, 2022</td>
                 </tr>
             </tbody>
         </table>
@@ -863,13 +844,13 @@
                     <td>64%</td>
                 </tr>
                 <tr class="text-center">
-                    <td class=" fw-bold h4">PR Aug 8, 2023</td>
+                    <td class="  h4">PR Aug 8, 2023</td>
                 </tr>
             </thead>
         </table>
     </div>
-
     <div class="divider"></div>
+
     <div class="container my-4 mx-auto px-0 shadow-lg">
         <table class="table table-striped table-danger">
             <thead>
