--- a/article.html
+++ b/article.html
@@ -36,6 +36,9 @@
                     <li class="nav-item">
                         <a href="landscape.html" class="nav-link">NASH LANDSCAPE</a>
                     </li>
+                    <li class="nav-item">
+                        <a href="result.html" class="nav-link">NASH RESULT</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -649,6 +652,17 @@
             </div>
         </div>
     </div>
+
+    <footer class="py-3 mt-5 mb-3">
+        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+          <li class="nav-item"><a href="index.html" class="nav-link px-2 text-body-secondary">Hepion</a></li>
+          <li class="nav-item"><a href="about.html" class="nav-link px-2 text-body-secondary">CRV431</a></li>
+          <li class="nav-item"><a href="article.html" class="nav-link px-2 text-body-secondary">Article</a></li>
+          <li class="nav-item"><a href="landscape.html" class="nav-link px-2 text-body-secondary">Landscape</a></li>
+          <li class="nav-item"><a href="result.html" class="nav-link px-2 text-body-secondary">Data</a></li>
+        </ul>
+        <p class="text-center text-body-secondary">© 2023 CapriceYuri</p>
+      </footer>
 
 </body>
 
