Fixed removed repeated BS classes

--- a/result.html
+++ b/result.html
@@ -45,9 +45,9 @@
     </nav>
 
     <!-- CODE DIVISION -->
-    <div class="container my-5 mx-auto px-0 shadow-lg rounded-5 bg-warning">
-        <div class="h4 text-center w-50 mx-auto p-2 m-0">89Bio</div>
-        <div class="text-center w-50 mx-auto p-2 m-0 bg">ETNB-ENLIVEN - Mar 22, 2023</div>
+    <div class="container my-5 px-0 shadow-lg rounded-5 bg-warning">
+        <div class="h4 text-center p-2 m-0">89Bio</div>
+        <div class="text-center p-2 m-0 bg">ETNB-ENLIVEN - Mar 22, 2023</div>
         <table class="table table-striped table-success">
             <thead>
                 <tr class="table-dark">
@@ -112,9 +112,9 @@
     <div class="divider my-5 bg-warning-subtle"></div>
 
     <!-- CODE DIVIDE -->
-    <div class="container my-4 mx-auto px-0 shadow-lg bg-warning rounded-4">
-        <div class="h4 text-center w-50 mx-auto p-2 m-0">Akero Therapeutics</div>
-        <div class="text-center w-50 mx-auto p-2 m-0 bg">AKRO-HARMONY - Sep 13, 2022</div>
+    <div class="container my-4 px-0 shadow-lg bg-warning rounded-4">
+        <div class="h4 text-center p-2 m-0">Akero Therapeutics</div>
+        <div class="text-center p-2 m-0 bg">AKRO-HARMONY - Sep 13, 2022</div>
         <table class="table table-striped table-success">
             <thead>
                 <tr class="table-dark">
@@ -194,9 +194,9 @@
     <div class="divider my-5 bg-warning-subtle"></div>
 
     <!-- CODE DIVISION -->
-    <div class="container my-4 mx-auto px-0 shadow-lg bg-warning rounded-4">
-        <div class="h4 text-center w-50 mx-auto p-2 m-0">Altimmune</div>
-        <div class="text-center w-50 mx-auto p-2 m-0 bg">ALT-P1B - Dec 20, 2022</div>
+    <div class="container my-4 px-0 shadow-lg bg-warning rounded-4">
+        <div class="h4 text-center p-2 m-0">Altimmune</div>
+        <div class="text-center p-2 m-0 bg">ALT-P1B - Dec 20, 2022</div>
         <table class="table table-striped table-success">
             <thead>
                 <tr class="table-dark">
@@ -277,9 +277,9 @@
     <div class="divider my-5 bg-warning-subtle"></div>
 
     <!-- CODE DIVISON -->
-    <div class="container my-4 mx-auto px-0 shadow-lg bg-warning rounded-4">
-        <div class="h4 text-center w-50 mx-auto p-2 m-0">Hepion Pharmaceuticals</div>
-        <div class="text-center w-50 mx-auto p-2 m-0 bg">HEPA-ALTITUDE - May 22, 2023</div>
+    <div class="container my-4 px-0 shadow-lg bg-warning rounded-4">
+        <div class="h4 text-center p-2 m-0">Hepion Pharmaceuticals</div>
+        <div class="text-center p-2 m-0 bg">HEPA-ALTITUDE - May 22, 2023</div>
         <table class="table table-success table-striped">
             <thead>
                 <tr class="table-dark">
@@ -392,9 +392,9 @@
     <div class="divider my-5 bg-warning-subtle"></div>
 
     <!-- CODE DIVISON -->
-    <div class="container my-4 mx-auto px-0 shadow-lg bg-warning rounded-4">
-        <div class="h4 text-center w-50 mx-auto p-2 m-0">Intercept Pharmaceuticals</div>
-        <div class="text-center w-50 mx-auto p-2 m-0 bg">NASH Program Terminated</div>
+    <div class="container my-4 px-0 shadow-lg bg-warning rounded-4">
+        <div class="h4 text-center p-2 m-0">Intercept Pharmaceuticals</div>
+        <div class="text-center p-2 m-0 bg">NASH Program Terminated</div>
         <table class="table table-striped table-danger">
             <thead>
                 <tr class="table-dark">
@@ -422,9 +422,9 @@
     </div>
     <div class="divider my-5 bg-warning-subtle"></div>
     <!-- CODE DIVISON -->
-    <div class="container my-4 mx-auto px-0 shadow-lg bg-warning rounded-4">
-        <div class="h4 text-center w-50 mx-auto p-2 m-0">Inventiva Pharma</div>
-        <div class="text-center w-50 mx-auto p-2 m-0 bg">IVA-NATIVE - Oct 20, 2021</div>
+    <div class="container my-4 px-0 shadow-lg bg-warning rounded-4">
+        <div class="h4 text-center p-2 m-0">Inventiva Pharma</div>
+        <div class="text-center p-2 m-0 bg">IVA-NATIVE - Oct 20, 2021</div>
         <table class="table table-striped table-success">
             <thead>
                 <tr class="table-dark">
@@ -526,9 +526,9 @@
     </div>
     <div class="divider my-5 bg-warning-subtle"></div>
     <!-- CODE DIVISON -->
-    <div class="container my-4 mx-auto px-0 shadow-lg rounded-4 bg-warning">
-        <div class="h4 text-center w-50 mx-auto p-2 m-0">Madrigal Pharmaceuticals</div>
-        <div class="text-center w-50 mx-auto p-2 m-0 bg">MDGL-MAESTRO - Dec 19, 2022</div>
+    <div class="container my-4 px-0 shadow-lg rounded-4 bg-warning">
+        <div class="h4 text-center p-2 m-0">Madrigal Pharmaceuticals</div>
+        <div class="text-center p-2 m-0 bg">MDGL-MAESTRO - Dec 19, 2022</div>
         <table class="table table-striped table-success">
             <thead>
                 <tr class="table-dark">
@@ -565,9 +565,9 @@
     </div>
     <div class="divider my-5 bg-warning-subtle"></div>
     <!-- CODE DIVISON -->
-    <div class="container my-4 mx-auto px-0 shadow-lg rounded-4 bg-warning">
-        <div class="h4 text-center w-50 mx-auto p-2 m-0">NGM Bio</div>
-        <div class="text-center w-50 mx-auto p-2 m-0 bg">NGM-ALPINE - May 24, 2021 </div>
+    <div class="container my-4 px-0 shadow-lg rounded-4 bg-warning">
+        <div class="h4 text-center p-2 m-0">NGM Bio</div>
+        <div class="text-center p-2 m-0 bg">NGM-ALPINE - May 24, 2021 </div>
         <table class="table table-striped table-success">
             <thead>
                 <tr class="table-dark">
@@ -624,9 +624,9 @@
     </div>
     <div class="divider my-5 bg-warning-subtle"></div>
     <!-- CODE DIVISON -->
-    <div class="container my-4 mx-auto px-0 shadow-lg rounded-4 bg-warning">
-        <div class="h4 text-center w-50 mx-auto p-2 m-0">Novo Nordisk</div>
-        <div class="text-center w-50 mx-auto p-2 m-0 bg">NVO-P2 - Jun 29, 2022</div>
+    <div class="container my-4 px-0 shadow-lg rounded-4 bg-warning">
+        <div class="h4 text-center p-2 m-0">Novo Nordisk</div>
+        <div class="text-center p-2 m-0 bg">NVO-P2 - Jun 29, 2022</div>
         <table class="table table-striped table-success">
             <thead>
                 <tr class="table-dark">
@@ -651,9 +651,9 @@
     </div>
     <div class="divider my-5 bg-warning-subtle"></div>
     <!-- CODE DIVISON -->
-    <div class="container my-4 mx-auto px-0 shadow-lg bg-warning rounded-4">
-        <div class="h4 text-center w-50 mx-auto p-2 m-0">Terns Pharmaceuticals</div>
-        <div class="text-center w-50 mx-auto p-2 m-0 bg">TERN-DUET - Aug 8, 2023</div>
+    <div class="container my-4 px-0 shadow-lg bg-warning rounded-4">
+        <div class="h4 text-center p-2 m-0">Terns Pharmaceuticals</div>
+        <div class="text-center p-2 m-0 bg">TERN-DUET - Aug 8, 2023</div>
         <table class="table table-striped table-success">
             <thead>
                 <tr class="table-dark">
@@ -696,9 +696,9 @@
     </div>
     <div class="divider my-5 bg-warning-subtle"></div>
     <!-- CODE DIVISON -->
-    <div class="container my-4 mx-auto px-0 shadow-lg rounded-4 bg-warning">
-        <div class="h4 text-center w-50 mx-auto p-2 m-0">Viking Therapeutics</div>
-        <div class="text-center w-50 mx-auto p-2 m-0 bg">VKTX-VOYAGE - May 16, 2023</div>
+    <div class="container my-4 px-0 shadow-lg rounded-4 bg-warning">
+        <div class="h4 text-center p-2 m-0">Viking Therapeutics</div>
+        <div class="text-center p-2 m-0 bg">VKTX-VOYAGE - May 16, 2023</div>
         <table class="table table-striped table-success">
             <thead>
                 <tr class="table-dark">
