Completed table  details.

--- a/landscape.html
+++ b/landscape.html
@@ -125,51 +125,51 @@
                     <td colspan="4" class="">Other Potential NAFLD/NASH</td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td>Lanifibranor</td>
                     <td>AbbVie</td>
-                    <td></td>
+                    <td class="text-primary">Partnership</td>
                     <td>259.3B</td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td>ALG-055009</td>
                     <td>Aligos</td>
-                    <td></td>
+                    <td>THR-β</td>
                     <td>37.2M</td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td>Efruxifermin</td>
                     <td>Amgen</td>
-                    <td></td>
+                    <td class="text-primary">Licensed Out</td>
                     <td>137.1B</td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td>ARO-PNPLA3</td>
                     <td>Arrowhead</td>
-                    <td></td>
+                    <td>RNAi</td>
                     <td>2.96B</td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td>AZD2693</td>
                     <td>AstraZeneca</td>
-                    <td></td>
+                    <td>LICA</td>
                     <td>207B</td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td>AXA1125</td>
                     <td>Axcella Health</td>
-                    <td></td>
+                    <td>Amino Acids</td>
                     <td>17M</td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td>Survodutide</td>
                     <td>Boehringer Ingelheim</td>
-                    <td></td>
+                    <td>GLP-1</td>
                     <td>191.4B</td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td>BOS-580</td>
                     <td>Boston</td>
-                    <td></td>
+                    <td>FGF21</td>
                     <td>78.98B</td>
                 </tr>
                 <tr>
@@ -179,21 +179,21 @@
                     <td>128.7B</td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td>Caspase-6</td>
                     <td>Elgia</td>
-                    <td></td>
+                    <td>Cysteine Pro.</td>
                     <td>220.1M</td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td>Tirzepatide</td>
                     <td>Eli Lilly</td>
-                    <td></td>
+                    <td>GLP-1</td>
                     <td>526.1B</td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td>Vonafexor</td>
                     <td>ENYO</td>
-                    <td></td>
+                    <td>FXR</td>
                     <td>Private</td>
                 </tr>
                 <tr>
@@ -203,75 +203,69 @@
                     <td>104.2M</td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td>GB1211</td>
                     <td>Galecto</td>
-                    <td></td>
+                    <td>Gal-3</td>
                     <td>16.4M</td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td>Aramchol</td>
                     <td>Galmed</td>
-                    <td></td>
+                    <td>FABAC</td>
                     <td>3.08M</td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td>BFKB8488A</td>
                     <td>Genentech</td>
-                    <td></td>
+                    <td>Antibody</td>
                     <td>Private</td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td>Elafibranor</td>
                     <td>Genfit</td>
-                    <td></td>
+                    <td>PPAR</td>
                     <td>177.6M</td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td>Cilofexor</td>
                     <td>Gilead</td>
-                    <td></td>
+                    <td>FXR</td>
                     <td>95.3B</td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td>GSK-4532990</td>
                     <td>GSK</td>
-                    <td></td>
+                    <td>iRNA</td>
                     <td>71.6B</td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td>HX-001</td>
                     <td>Hepatx</td>
-                    <td></td>
+                    <td>Stem Cell</td>
                     <td>Private</td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td>HTD1801</td>
                     <td>Hightide</td>
-                    <td></td>
+                    <td>Hypolipidemic</td>
                     <td>145.6M</td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td>Emricasan</td>
                     <td>Histogen</td>
-                    <td></td>
+                    <td>Pancaspase</td>
                     <td>2.89M</td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td>ARO-PNPLA3</td>
                     <td>J&J</td>
-                    <td></td>
+                    <td class="text-danger">Dropped</td>
                     <td>389.3B</td>
                 </tr>
                 <tr>
-                    <td></td>
-                    <td>Life BioScience</td>
-                    <td></td>
-                    <td>Private</td>
-                </tr>
-                <tr>
-                    <td></td>
+                    <td>LPCN-1144</td>
                     <td>Lipocine</td>
-                    <td></td>
+                    <td>TU</td>
                     <td>21M</td>
                 </tr>
                 <tr>
@@ -281,15 +275,15 @@
                     <td>119.6M</td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td>MK-6024</td>
                     <td>Merck & Co</td>
-                    <td></td>
+                    <td>GLP-1</td>
                     <td>276.5B</td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td>DA-1241</td>
                     <td>NeuroBo</td>
-                    <td></td>
+                    <td>GPR119</td>
                     <td>17.1M</td>
                 </tr>
                 <tr>
@@ -299,28 +293,16 @@
                     <td>229.9B</td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td>Ervogastat</td>
                     <td>Pfizer</td>
-                    <td></td>
+                    <td>DGAT2</td>
                     <td>199.7B</td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td>TVB-2640</td>
                     <td>Sagimet</td>
-                    <td></td>
+                    <td>FASN</td>
                     <td>257.9M</td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td>Salix</td>
-                    <td></td>
-                    <td>Private</td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td>Viscient</td>
-                    <td></td>
-                    <td>Private</td>
                 </tr>
             </tbody>
         </table>
